--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-</head>
+    <script src="play.js" ></script>
 
-<body>
-hi
-</body>
+<script>
+  app = new setup
+ app.ready(start)
+ function start(e){
+   app. alert("hello", "hi")
+ }
+  
+</script>
 
 </html>
