--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 
 <script>
   app = new setup
+  app.module("tab", "bar", "drawer")
  app.ready(start)
  function start(e){
+  l= new bar("Playscript", "noshadow")
+  l.icons(0).on("click",function(){d.open()})
+  d=new drawer
+  
    app. alert("hello", "hi")
  }
   
