--- a/test.html
+++ b/test.html
@@ -5,10 +5,10 @@
 <script src="play.js"></script>
 <script>
 app = new setup
-app.module("page", "slit")
+app.module("underweigh" )
 app.ready(start)
 function start(){
-  body.add(new button("open page"). on("click", function(){app. prompt("nico") ;new slit("hello, hi, howaya")}))
+ new underweigh
 }
 </script>
 
