--- a/test.html
+++ b/test.html
@@ -5,10 +5,10 @@
 <script src="play.js"></script>
 <script>
 app = new setup
-app.module("underweigh" )
+app.module("slit" )
 app.ready(start)
 function start(){
- new underweigh
+ new slit("f,d,r")
 }
 </script>
 
