--- a/test.html
+++ b/test.html
@@ -5,11 +5,18 @@
 <script src="play.js"></script>
 <script>
 app = new setup
-app.module("slit" )
+app.module("menu" )
 app.ready(start)
 function start(){
- new slit("f,d,r")
+ body.add(new stringlist("a,b,c").select(function(e,h,r,d){new menu("e,h,d")}),
+          new stringlist("1,2,3").push({title:"hi",body:"im special",img:"img.png"}),
+          new stringlist("@,#,$").push({title:"hey",body:"metoo"}),
+          new text("play",null,null,"mdi")
+          )
+          g=undefined
+          console.log(typeof g)
 }
+
 </script>
 
 </html>
