--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <script>
   app = new setup
+  app.theme("dark")
   app.module("bar", "drawer","menu","page")
  app.ready(start)
  function start(e){
