--- a/test.html
+++ b/test.html
@@ -5,16 +5,10 @@
 <script src="play.js"></script>
 <script>
 app = new setup
-app.module("menu" )
+app.module("details")
 app.ready(start)
 function start(){
- body.add(new stringlist("a,b,c").select(function(e,h,r,d){new menu("e,h,d")}),
-          new stringlist("1,2,3").push({title:"hi",body:"im special",img:"img.png"}),
-          new stringlist("@,#,$").push({title:"hey",body:"metoo"}),
-          new text("play",null,null,"mdi")
-          )
-          g=undefined
-          console.log(typeof g)
+new dialog("helo",new stringlist("0000,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,9,0,0,0,8,0,0,0,0,0,0,0,0,0,0,0,0,0,0,000"))
 }
 
 </script>
