--- a/merlusDB.html
+++ b/merlusDB.html
@@ -2,6 +2,30 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<!--<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<!--<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>-->
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyCkJTS2YR8rF2nBGflp3r4YsuSfcFoV27I",
+    authDomain: "msp-db.firebaseapp.com",
+    projectId: "msp-db",
+    storageBucket: "msp-db.appspot.com",
+    messagingSenderId: "1056691406446",
+    appId: "1:1056691406446:web:ddfdc5cbdd4e6f23f1887f",
+    measurementId: "G-SCJW2HFLBR"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
 <script src="play.js"></script>
 <script>
   app = new setup({ title: "MerlusDB™" })
@@ -19,13 +43,18 @@
     b = new bar("MerlusDB")
     b.icons(0).on("click", function() { d.open() })
     b.icons(1).on("click", function() {
-      new menu("Upload all files,Upload current file,Settings,Reset,Exit", "right,top", function(e, h) {
+      new menu("Save all files,Save current file,Reset all files,Reset current file,Settings,Exit", "right,top", function(e, h) {
         /*world menu*/
-        if (h == "Settings") new menu("Hue,Theme,Font", "top,right");
+        if(h=="Reset current file")app.confirm("this will delete all entries entered on this file, continue?","Warning",function(e){if(e){db[cdb][ctb()]=[];sdb();mlist.list([])}})
+        if(h=="Reset all files")app.confirm("your about to delete all entries entered today, make sure files are saved before deleting, continue?","Warning",function(e){if(e){db = {"BF1":{ "Boxing": [], "Pulling": [] },
+              "BF2":{ "Boxing": [], "Pulling": [], "Knives": [], "Breakdown": [], "Memo": [] }};sdb();mlist.list([])}})
+        if (h == "Settings") new menu("Hue,Theme,Font", "top,right",function(e,h){
+          if(h=="Theme")new menu("light,dark,black","top,right",function(e,h){app.theme(h)})
+        });
       })
     })
     d = new drawer();
-    d.body.add(new hero("MerlusDB™", "100%", "200px", "bottom,right"), dlist = new stringlist("BF1 Boxing,BF1 Pulling,BF2 Boxing,BF2 Pulling,Knives,Breakdrown,Memo").select(function(e, h, d) {
+    d.body.add(new hero("MerlusDB™ Infeed", "100%", "200px", "bottom,right"), dlist = new stringlist("BF1 Boxing,BF1 Pulling,BF2 Boxing,BF2 Pulling,Knives,Breakdrown,Memo").select(function(e, h, d) {
       if(h.title.includes("BF1"))cdb="BF1";else cdb="BF2"
       if(e==0)mlist.list(db.BF1[h.title.replace("BF1 ","")]);
       if(e==1)mlist.list(db.BF1[h.title.replace("BF1 ","")]);
@@ -87,7 +116,9 @@ if(dlist.highlighted==0||dlist.highlighted==2){
 /*pulling query*/
         if (dlist.highlighted == 1||dlist.highlighted==3) app.prompt("enter name",null,function(e){
           if(e){dat.title=e;app.prompt("start time",null,function(e){
-            if(e){dat.st=e.replace(".",":").replace(",",":");app.prompt("mappa code",null,function(e){
+            if(e){dat.st=e.replace(".",":").replace(",",":");
+            if(dat.st.length==4)dat.st="0"+dat.st
+            app.prompt("mappa code",null,function(e){
               dat.mc=e||"n/a";dat.et="ongoing";dat.body=dat.st+" - "+dat.et
               db[cdb].Pulling.push(dat);sdb();mlist.push(dat)
               app.snack("happy pullings "+dat.title+".")
@@ -101,13 +132,21 @@ if(dlist.highlighted==0||dlist.highlighted==2){
 
 
 
-    body.add(ney = new text("No entries yet.", "95%").css({ "text-align": "center", color: "var(--accent)" }), mlist = new stringlist(db.BF1.Boxing).select(function(e,h,d){new menu("Edit,Delete",null,function(e2,h2){
-      if(h2=="Edit"){
+    body.add(ney = new text("No entries yet.", "95%").css({ "text-align": "center", color: "var(--accent)" }), mlist = new stringlist(db.BF1.Boxing).select(function(e,h,d){new menu("View,Delete",null,function(e2,h2){
+      var num=e
+      if(h2=="View"){
         if(ctb()=="Boxing"){
-          new dialog(h.title,new flex("column").add(new stringlist([{title:"Knife code",body:h.kc},{title:"Mappa code",body:h.mg},{title:"Contition",body:h.con||"unknown"}])),null,"finnish")
+          new dialog(h.title,new flex("column").add(new stringlist([{title:"Start time",body:h.st},{title:"End time",body:h.et},{title:"Knife code",body:h.kc},{title:"Mappa code",body:h.mg},{title:"Mappa condition",body:h.con||"good"}])),null,null,"edit")
         }
         if(ctb()=="Pulling"){
-          new dialog(h.title,new flex("column").add(new stringlist([{title:"Mappa code",body:h.mc},{title:"Contition",body:h.con||"unknown"}])),null,"finnish")
+          new dialog(h.title,new flex("column").add(new stringlist([{title:"Start time",body:h.st},{title:"End time",body:h.et},{title:"Mappa code",body:h.mc},{title:"Mappa condition",body:h.con||"good"}])),function(e){
+            if(e){
+              if(h.et=="ongoing")app.prompt("end time",null,function(e){
+                db[cdb][ctb()][num].et=e.replace(",",":").replace(".",":")
+                if(db[cdb][ctb()][num].et.length==4)db[cdb][ctb()][num].et="0"+db[cdb][ctb()][num].et;db[cdb][ctb()][num].body=db[cdb][ctb()][num].st+" - "+db[cdb][ctb()][num].et;sdb();mlist.list(db[cdb][ctb()])
+              },"number")
+            }
+          },null,h.et=="ongoing"?"finnish":"edit")
         }
       }
       if(h2=="Delete")app.confirm(`Are you sure to delete ${h.title}'s post?`,null,function(e3){if(e3){db[cdb][ctb()].splice(e,1);mlist.pop(e);sdb()}})})}))
