--- a/merlusDBAdmin.html
+++ b/merlusDBAdmin.html
@@ -94,7 +94,7 @@
               }
               
               req2.replace("code_date",mlist.list()[num].title.replaceAll("_"," "))
-              setTimeout(function(){m=new modal(null,"show").html("<div style='background:var(--back);width:1611.47px;height:936.627px;padding:10px;overflow:scroll;transform:scale(1);'>"+req2+"</div>");m.align("flex-start").css("overflow","scroll")},2000)
+              setTimeout(function(){m=new modal(null,"show").html("<div style='background:white;width:1611.47px;height:936.627px;padding:10px;overflow:scroll;transform:scale(1);'>"+req2+"</div>");m.align("flex-start").css("overflow","scroll")},2000)
     }
   </script>
 </html>
