--- a/MerlusDBarchive.html
+++ b/MerlusDBarchive.html
@@ -30,9 +30,9 @@
 </script>
 <script src="play.js"></script>
 <script>
-  app = new setup({ title: "MerlusDB™" })
-  app.module("hero", "slit","menu", "drawer", "underweigh", "bar")
-  app.ready(start)
+  app = new setup({ title: "MerlusDB™" ,
+  import:"hero,slit,menu,drawer,underweigh,bar"})
+  
 
   function start() {
     
