--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@ app = new setup
 app.module("loader")
 app.ready(start)
 function start(){
-body.add(new loader)
+body.add(new edit("time").type("time"))
   
   
 }
