--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
 
     app=new setup({
   
-      import:"tab,color",
+      import:"loader",
       type:"matte",
       theme:"dark"
     })
     function start(e){
-     body. add(b=new flex("column", "200px","8px"). css({background:"black"}) 
-    . add(a =new flex("column", "0px","8px"))) 
+      a=new loader
+      setTimeout(()=>{a. close()}, 10000)
      
       
             }
