--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     function start(e){
       a=new loader
       setTimeout(()=>{a. close()}, 10000)
+      console.log(app.get("https://audio-love.herokuapp.com/search/sam+lalala").responseText)
      
       
             }
